# Kuka-Value

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: ARCHITECTURE.md
src/kuka_value/: __init__.py
src/kuka_value/analyzers/: __init__.py  _common.py  axis_load_analyzer.py  controller_analyzer.py  payload_analyzer.py  robot_analyzer.py  robot_info_xml.py
src/kuka_value/engine/: __init__.py  engine.py
src/kuka_value/exporters/: __init__.py  base.py  batch_base.py  batch_csv_exporter.py  batch_excel_exporter.py  batch_json_exporter.py  csv_exporter.py  excel_exporter.py  json_exporter.py
src/kuka_value/models/: __init__.py  axis_load.py  batch_result.py  controller_info.py  general_info.py  payload.py  robot_info.py  warnings.py
src/kuka_value/parser/: __init__.py  backup_reader.py  krl_lexer.py  krl_parser.py
src/kuka_value/ui/: __init__.py  analysis_worker.py  axis_load_table_model.py  batch_analysis_worker.py  batch_results_window.py  batch_summary_table_model.py  main.py  main_window.py  payload_table_model.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_batch_results_window.py  test_engine.py  test_main_window.py
tests/unit/: __init__.py  test_analysis_worker.py  test_axis_load_analyzer.py  test_axis_load_table_model.py  test_backup_reader.py  test_batch_analysis_worker.py  test_batch_csv_exporter.py  test_batch_excel_exporter.py  test_batch_json_exporter.py  test_batch_result.py  test_batch_summary_table_model.py  test_controller_analyzer.py  test_csv_exporter.py  test_excel_exporter.py  test_json_exporter.py  test_krl_lexer.py  test_krl_parser.py  test_models.py  test_payload_analyzer.py  test_payload_table_model.py  test_robot_analyzer.py  test_robot_info_xml.py
